WebKitTools:

2008-04-08  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitzpettel

        Fixed http://bugs.webkit.org/show_bug.cgi?id=18302
        -WebArchive subresources dump in random order, intermittent failures

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (compareResourceURLs): Sorting function based on the resource URLs
        (serializeWebArchiveToXML): Sort the subresource array

LayoutTests:

2008-04-08  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitzpettel

        Fixed http://bugs.webkit.org/show_bug.cgi?id=18302
        -WebArchive subresources dump in random order, intermittent failures

        Now that a DRT fix has set the order, these 3 tests needed new results

        * webarchive/test-css-import-expected.txt:
        * webarchive/test-duplicate-resources-expected.txt:
        * webarchive/test-frameset-expected.txt:



Canonical link: https://commits.webkit.org/25279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31722 268f45cc-cd09-0410-ab3c-d52691b4dbfc